[package]
name = "braid_market"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
beacon_core = { path = "../beacon_core" }
rand = "0.8.5"
serde = { version = "1.0.173", features=["derive"] }
warp = "0.3.5"
