[package]
name = "weaver_market"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
weaver_core = { path = "../weaver_core" }
mongodb = "2.6.1"
rand = "0.8.5"
serde = { version = "1.0.173", features=["derive"] }
warp = "0.3.5"
futures = "0.3.28"
